--- a/src/index.css
+++ b/src/index.css
@@ -119,10 +119,11 @@ a {
   height: 60%;
   left: 50%;
   overflow: auto;
-  background-color: #fff;
   transform: translate(70%, 15%);
-  border: none !important;
+  background-color: rgb(253, 253, 253) !important;
+  border: 1px solid rgba(195, 195, 195, 0.553) !important;
   border-radius: 10px !important; 
+  padding: auto !important;
 
 }
 
@@ -134,20 +135,20 @@ a {
 }
 
 
-@media screen and (max-width: 740px) { 
+/* @media screen and (max-width: 740px) { 
   .ReactModal__Content {
-      width: 60%;
+      width: 80%;
       height: 80%;
-      transform: translate(25%, 0%);
+      transform: translate(3%, 0%);
 
   }
-}
+} */
 
-@media screen and (max-width: 425px) { 
+@media screen and (max-width: 500px) { 
   .ReactModal__Content {
       width: 90%;
-      height: 80%;
-      transform: translate(-5%, 0%);
+      height: 60%;
+      transform: translate(-5%, 10%);
 
   }
 }
